--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 	<section id="hero">
 		<div class="container">
 			<video autoplay muted loop>
-				<source src="/meme/crotos1.mp4" type="video/mp4">
+				<source src="./meme/crotos1.mp4" type="video/mp4">
 			</video>
 
 			<header>
