--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
 			</video>
 
 			<header>
-				<a href="/"><img src="./meme/crotos (2).png" alt="Logo" style="width: 5vw;"></a>
+				<a href="https://www.puush.fun/coin/0x712E9ac5bad0EcA8e6aF4FcA656b212DCF6b01B2"><img src="./meme/crotos (2).png" alt="Logo" style="width: 5vw;"></a>
 
 				<nav>
 					<ul>
-						<li><a href="#">BUY CROTOS</a></li>
+						<li><a href="https://www.puush.fun/coin/0x712E9ac5bad0EcA8e6aF4FcA656b212DCF6b01B2">BUY CROTOS</a></li>
 						<!-- <li><a href="#">Company</a></li>
 						<li><a href="#">Blog</a></li>
 						<li><a href="#">Careers</a></li>
